# hpxpy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  env.sh  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.github/workflows/: bench.yml  ci.yml  docs.yml
benchmarks/: __init__.py  microbench.py  runner.py
benchmarks/results/: M2_penalty_notes.md  M3_elementwise_notes.md  M3_scalar_notes.md  M3_sort_scan_notes.md  M5_spmm_notes.md  M5_spmv_notes.md  m2_dot.csv  m2_max.csv  m2_min.csv  m2_sum.csv  m3_add.csv  m3_mul.csv  m5_spmm.csv  m5_spmv.csv  strided_penalty_notes.md
cpp_baseline/: CMakeLists.txt  README.md  bench.cpp  diag.cpp
docs/: PLAN.md  api.rst  conf.py  index.rst
hpxpy/: __init__.py
scripts/: check.sh
src/: _core.cpp  array.hpp  matrix.hpp  sparse.hpp  timing.hpp
tests/: conftest.py  test_array.py  test_axis_reductions_matmul.py  test_bench_runner.py  test_broadcast.py  test_distributed.py  test_distributed_local.py  test_dtype_promotion.py  test_dtypes.py  test_dtypes_compute.py  test_dtypes_rest.py  test_elementwise.py  test_nd.py  test_nd_slicing.py  test_nd_views.py  test_numpy_bridge.py  test_numpy_wave1.py  test_numpy_wave2.py  test_parity.py  test_reductions.py  test_scalar.py  test_slice.py  test_slice_assign.py  test_smoke.py  test_sort_scan.py  test_spmm.py  test_spmv.py  test_strided.py  test_threads.py
