# hpxpy — NumPy-compatible Python arrays backed by HPX.
# Build: scikit-build-core (PEP 517 backend) -> CMake -> nanobind extension.
# SPDX-License-Identifier: MIT

[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "hpxpy"
version = "0.0.1"
description = "NumPy-compatible Python arrays backed by the HPX C++ runtime"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Andrew Lumsdaine" }]
# No runtime deps in Phase 1 (the data path is pure HPX). NumPy returns as a real
# dependency with the Phase-2 zero-copy bridge.
dependencies = []

[project.optional-dependencies]
# numpy is a TEST-only oracle for the bridge (round-trip / parity), not a runtime dep.
test = ["pytest>=7", "pytest-cov>=4", "numpy>=1.23"]
docs = ["sphinx>=7", "furo"]
dev = ["pytest>=7", "pytest-cov>=4", "numpy>=1.23", "ruff", "nox", "sphinx>=7", "furo"]

[tool.scikit-build]
minimum-version = "0.9"
build-dir = "build/{wheel_tag}"
wheel.packages = ["hpxpy"]
# Point CMake at the installed HPX prefix via, e.g.:
#   pip install -e . -C cmake.define.CMAKE_PREFIX_PATH=$HPX_ROOT
[tool.scikit-build.cmake.define]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]          # so tests can import the benchmarks package

[tool.coverage.run]
source = ["hpxpy", "benchmarks"]
